<resources>
    <string name="app_name">Trill</string>
    <string name="splash_title">抖音</string>
    <string name="home_name">首页</string>
    <string name="found_name">发现</string>
    <string name="msg_name">消息</string>
    <string name="mine_name">我的</string>
    <string name="home_attention">关注</string>
    <string name="home_recommend">推荐</string>
    <string name="home_fresh">新鲜</string>
    <!--<string name="fragment_add_json">{"msg": "success", "status_code": 0, "has_more": 0, "cursor": 1024, "mc_list": [{"mc_name": "\u6d41\u884c", "name": "\u6d41\u884c", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c160004b51b2f73ebf5.jpeg"], "uri": "c160004b51b2f73ebf5"}, "mc_id": "1", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c150004b3d9db221147.png"], "uri": "c150004b3d9db221147"}, "id_str": "1", "id": 1}, {"mc_name": "\u7535\u97f3\u8db4", "name": "\u7535\u97f3\u8db4", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c15000009e5cd1e77c7.jpeg"], "uri": "c15000009e5cd1e77c7"}, "mc_id": "2", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c160004b4c5ec5ca53b.png"], "uri": "c160004b4c5ec5ca53b"}, "id_str": "2", "id": 2}, {"mc_name": "\u6821\u56ed", "name": "\u6821\u56ed", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c15000009e675d924b7.jpeg"], "uri": "c15000009e675d924b7"}, "mc_id": "3", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c160004b521ff105f40.png"], "uri": "c160004b521ff105f40"}, "id_str": "3", "id": 3}, {"mc_name": "\u6b27\u7f8e", "name": "\u6b27\u7f8e", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c15000009e884e0404c.jpeg"], "uri": "c15000009e884e0404c"}, "mc_id": "7", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c160004b524f16032ba.png"], "uri": "c160004b524f16032ba"}, "id_str": "7", "id": 7}, {"mc_name": "\u65e5\u97e9", "name": "\u65e5\u97e9", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c15000009f03c0edb07.jpeg"], "uri": "c15000009f03c0edb07"}, "mc_id": "5", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c160004b526054c8c24.png"], "uri": "c160004b526054c8c24"}, "id_str": "5", "id": 5}, {"mc_name": "\u6d17\u8111\u795e\u66f2", "name": "\u6d17\u8111\u795e\u66f2", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c15000009ee3a022f9d.jpeg"], "uri": "c15000009ee3a022f9d"}, "mc_id": "6", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c150004b4a6ff6018eb.png"], "uri": "c150004b4a6ff6018eb"}, "id_str": "6", "id": 6}, {"mc_name": "\u6fc0\u840c", "name": "\u6fc0\u840c", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c16000009e7505dda01.jpeg"], "uri": "c16000009e7505dda01"}, "mc_id": "10", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c150004b4a800ec88a6.png"], "uri": "c150004b4a800ec88a6"}, "id_str": "10", "id": 10}, {"mc_name": "\u8bf4\u5531", "name": "\u8bf4\u5531", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c160000067b33e76113.jpeg"], "uri": "c160000067b33e76113"}, "mc_id": "18", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c150004b4adf160500d.png"], "uri": "c150004b4adf160500d"}, "id_str": "18", "id": 18}, {"mc_name": "\u821e\u8e48", "name": "\u821e\u8e48", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c16000009e6bb062202.jpeg"], "uri": "c16000009e6bb062202"}, "mc_id": "8", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c160004b535bd58f7ab.png"], "uri": "c160004b535bd58f7ab"}, "id_str": "8", "id": 8}, {"mc_name": "\u4e8c\u6b21\u5143", "name": "\u4e8c\u6b21\u5143", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c15000009e77ab257de.jpeg"], "uri": "c15000009e77ab257de"}, "mc_id": "4", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c150004b4cf48ba9b7c.png"], "uri": "c150004b4cf48ba9b7c"}, "id_str": "4", "id": 4}, {"mc_name": "\u7ecf\u5178", "name": "\u7ecf\u5178", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c16000009e9c9174084.jpeg"], "uri": "c16000009e9c9174084"}, "mc_id": "12", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c160004b541709186e4.png"], "uri": "c160004b541709186e4"}, "id_str": "12", "id": 12}, {"mc_name": "\u5f71\u89c6\u539f\u58f0", "name": "\u5f71\u89c6\u539f\u58f0", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c15000009efac7aa52e.jpeg"], "uri": "c15000009efac7aa52e"}, "mc_id": "9", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c160004b54348fd8936.png"], "uri": "c160004b54348fd8936"}, "id_str": "9", "id": 9}, {"mc_name": "\u7efc\u827a", "name": "\u7efc\u827a", "cover": {"url_list": ["http://p3.pstatp.com/live/200x200/c16000009e867fa19f9.jpeg"], "uri": "c16000009e867fa19f9"}, "mc_id": "11", "aweme_cover": {"url_list": ["http://p3.pstatp.com/live/100x100/c150004b4c450a1b4fc.png"], "uri": "c150004b4c450a1b4fc"}, "id_str": "11", "id": 11}]}</string>-->

</resources>
