<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">
    <FrameLayout
        android:id="@+id/full_home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></FrameLayout>

    <View
        android:id="@+id/full_home_tab_line"
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/color_gray_9"
        android:layout_centerHorizontal="true"
        />
    <View
        android:id="@+id/full_home_tab_move_line"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:background="@color/color_white"
        android:layout_alignLeft="@id/full_home_tab_line"
        android:layout_below="@id/full_home_tab_line"/>
    <RadioGroup
        android:id="@+id/full_home_tab_container"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/full_home_tab_move_line"
        android:layout_below="@id/full_home_tab_move_line"
        android:background="@color/color_alpha_0"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/full_home_tab_attention"
            style="@style/fragment_main_bottom_radio_button"
            android:layout_weight="1"
            android:text="@string/home_attention"
            android:textSize="18sp"
            />

        <RadioButton
            android:id="@+id/full_home_tab_recommend"
            style="@style/fragment_main_bottom_radio_button"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/home_recommend"
            />
        <RadioButton
            android:id="@+id/full_home_tab_fresh"
            style="@style/fragment_main_bottom_radio_button"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/home_fresh"
            />



    </RadioGroup>




</RelativeLayout>